# hrp_odoo17c

./: .gitignore
spc_bs_apps/bs_billing_add_field/: __manifest__.py
spc_bs_apps/bs_billing_add_field/models/: account_billing.py
spc_bs_apps/bs_billing_add_field/views/: account_billing_view.xml
spc_bs_apps/bs_companies_iso/: __manifest__.py
spc_bs_apps/bs_companies_iso/models/: res_company.py
spc_bs_apps/bs_companies_iso/views/: res_company_views.xml
spc_bs_apps/bs_contact_add_field/: __manifest__.py
spc_bs_apps/bs_contact_add_field/models/: res_partner.py
spc_bs_apps/bs_contact_add_field/views/: res_partner_views.xml
spc_bs_apps/bs_create_form_quotation_g_plus/: __manifest__.py
spc_bs_apps/bs_create_form_quotation_g_plus/models/: sale_order.py
spc_bs_apps/bs_create_form_quotation_g_plus/report/: report_g_plus.xml  request_report.xml
spc_bs_apps/bs_create_form_tax_invoice_gee_plus_hrp/: __manifest__.py
spc_bs_apps/bs_create_form_tax_invoice_gee_plus_hrp/report/: report_gee_plus.xml  request_report.xml
spc_bs_apps/bs_create_form_tax_invoice_hrp_preprint/: __manifest__.py
spc_bs_apps/bs_create_form_tax_invoice_hrp_preprint/report/: report_invoice.xml  request_report.xml
spc_bs_apps/bs_create_report_billing_hrp/: __manifest__.py
spc_bs_apps/bs_create_report_billing_hrp/models/: account_billing.py
spc_bs_apps/bs_create_report_billing_hrp/report/: bs_create_report_billing_hrp_template.xml  report_bs_create_report_billing_hrp_page.xml  request_report.xml
spc_bs_apps/bs_create_report_billing_hrp_a5/: __manifest__.py
spc_bs_apps/bs_create_report_billing_hrp_a5/models/: account_billing.py
spc_bs_apps/bs_create_report_billing_hrp_a5/report/: bs_create_report_billing_hrp_a5_template.xml  report_bs_create_report_billing_hrp_a5_page.xml  request_report.xml
spc_bs_apps/bs_fieldservice/: __manifest__.py
spc_bs_apps/bs_fieldservice/data/: ir_cron_data.xml  ir_sequence_data.xml
spc_bs_apps/bs_fieldservice/models/: __init__.py  (+13 more)
spc_bs_apps/bs_from_sale_quotation_th_hrp/: __manifest__.py
spc_bs_apps/bs_invoice_modify_field/: __manifest__.py
spc_bs_apps/bs_product_configurator_sale_hrp/: __manifest__.py
spc_bs_apps/bs_sale_order_hrp/: __manifest__.py
spc_third_apps_free/: README.md  requirements.txt
spc_third_apps_free/base_territory/: __manifest__.py
spc_third_apps_free/fieldservice_current_location/: README.rst  __manifest__.py
spc_third_apps_free/fieldservice_fleet/: README.rst  __manifest__.py  hooks.py
spc_third_apps_free/fieldservice_recurring/: README.rst  __manifest__.py
spc_third_apps_free/fieldservice_sale/: README.rst  __manifest__.py
spc_third_apps_free/fieldservice_stock_request/: README.rst  __manifest__.py
spc_third_apps_free/quality_control_oca/: README.rst  __manifest__.py
spc_third_apps_free/sale_order_note_template/: README.rst  __manifest__.py
spc_third_apps_free/setup/_metapackage/: pyproject.toml
(+189 files in other folders)
