[project]
name = "odoo-addons-oca-field-service"
version = "17.0.20260409.0"
dependencies = [
    "odoo-addon-base_territory>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_account>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_account_analytic>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_activity>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_address_no_change>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_agreement>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_agreement_repair>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_availability>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_base_location>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_calendar>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_crm>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_current_location>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_equipment_stock>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_equipment_stock_return>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_fleet>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_geoengine>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_isp_flow>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_kanban_info>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_maintenance>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_portal>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_project>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_recurring>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_repair>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_repair_order_template>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_route>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_route_availability>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale_agreement>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale_agreement_equipment_stock>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale_recurring>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale_stock>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale_stock_from_pos>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_size>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_skill>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stage_server_action>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stage_validation>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stock>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stock_request>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stock_scrap>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_timeline>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_vehicle>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
